# vectros-sdk-python

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  reference.md
.fern/: metadata.json
tests/: test_aiohttp_autodetect.py
vectros/: __init__.py  client.py
vectros/auth/: client.py  raw_client.py
vectros/compliance/: __init__.py  client.py  raw_client.py
vectros/compliance/types/: __init__.py  erasure_request_audit_disposition.py  erasure_request_subject_type.py  export_request_format.py  export_request_scope.py  export_request_subject_type.py
vectros/core/: client_wrapper.py
vectros/documents/: __init__.py  client.py  raw_client.py
vectros/documents/types/: __init__.py  document_lookup_request_order.py  file_upload_request_index_mode.py  lookup_documents_request_order.py
vectros/errors/: __init__.py
vectros/folders/: client.py  raw_client.py
vectros/identity/: __init__.py  client.py  raw_client.py
vectros/identity/types/: __init__.py  list_clients_request_order.py  list_orgs_request_order.py  list_users_request_order.py
vectros/inference/: client.py  raw_client.py
vectros/records/: __init__.py  client.py  raw_client.py
vectros/records/types/: __init__.py  batch_write_request_atomicity.py  lookup_records_request_order.py  record_lookup_request_order.py
vectros/schemas/: client.py  raw_client.py
vectros/search/: __init__.py  client.py  raw_client.py
vectros/search/types/: __init__.py  search_request_content_types_item.py  search_request_mode.py  search_request_text_mode.py
vectros/types/: __init__.py  access_profile_page.py  access_profile_request.py  access_profile_request_status.py  access_profile_response.py  access_profile_spec.py  admin_logs_response.py  app_context_page.py  app_context_request.py  app_context_response.py  app_context_response_status.py  batch_get_response.py  batch_item_error.py  batch_lookup_input.py  batch_lookup_response.py  batch_lookup_result.py  batch_lookup_result_status.py  batch_write_response.py  batch_write_result.py  batch_write_result_status.py  changed_field.py  chat_message.py  chat_stream_event.py  client_page.py  client_request.py  client_request_status.py  client_response.py  content_delta_event.py  content_delta_event_event.py  context_detail.py  count_and_credits.py  create_invite_request.py  create_invite_response.py  credit_breakdown.py  credits.py  data_out.py  data_scope.py  document_ask_stream_event.py  document_context_event.py  document_context_event_event.py  (+135 more)
